<resources>
    <string name="app_name">BeAware</string>
    <string name="dont_understand">I don\'t understand</string>
    <string name="understand">I understand</string>
    <string name="parental">Parental Control</string>
    <string name="switch_on">On</string>
    <string name="report">File a Report</string>
    <string name="validation">Platform validation</string>
    <string name="crime_data">Get Crime Data</string>
    <string name="notifications">Notifications</string>
    <string name="name_platform">Name of Platform</string>
    <string name="hint_platform">Enter name of platform</string>
    <string name="other_details">Other Details</string>
    <string name="other_details_text">Enter other details</string>
    <string name="category_text">Category</string>
    <string name="submit">submit</string>
    <string name="is_there_an_emergency">Is there an emergency?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="timer">Timer</string>
    <string-array name="category_platform">
        <item>Job Agency</item>
        <item>Finance</item>
        <item>Investment</item>
        <item>Entertainment</item>
    </string-array>
</resources>
